v2-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-v2
  labels:
    app: ingress-test-v2
spec:
  replicas: 1
  template:
    metadata:
      name: ingress-test-v2
      labels:
        app: ingress-test-v2
    spec:
      containers:
        - name: ingress-test-v2
          image: lnanjangud653/ingress-test:v2
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: ingress-test-v2
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-v2
spec:
  selector:
    app: ingress-test-v2
  ports:
    - port: 8080
  type: LoadBalancer
