v3-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-test-v3
  labels:
    app: ingress-test-v3
spec:
  replicas: 1
  template:
    metadata:
      name: ingress-test-v3
      labels:
        app: ingress-test-v3
    spec:
      containers:
        - name: ingress-test-v3
          image: lnanjangud653/ingress-test:v3
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
  selector:
    matchLabels:
      app: ingress-test-v3
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-v3
spec:
  selector:
    app: ingress-test-v3
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
