ingress-all.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: avi-lb
  rules:
    - host: appingress.tanzu.lab
      http:
        paths:
          - path: /v1
            pathType: Prefix
            backend:
              service:
                name: ingress-test-v1
                port:
                  number: 8080
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: ingress-test-v2
                port:
                  number: 8080
          - path: /v3
            pathType: Prefix
            backend:
              service:
                name: ingress-test-v3
                port:
                  number: 8080
